# terve

./: .gitattributes  Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
.github/workflows/: build.yml  ci.yml  release.yml
src/: http.rs  main.rs  shared.rs  terraform.rs  terragrunt.rs  utils.rs
tests/: main.rs  special.txt  terraform_0.13.1_SHA256SUMS.348FFC4C.sig  terraform_0.13.1_SHA256SUMS.72D7468F.sig
