[package]
name    = "terve"
version = "0.8.0"
edition = "2021"

[dependencies]
regex       = "~1.6"
pico-args   = "~0.5"
zip         = "~0.6"
tempfile    = "~3.3"
dirs        = "~4.0"
semver      = "~1.0"
sha2        = "~0.10"
hex         = "~0.4"
pgp         = "~0.8"
bytes       = "~1.1"

[dependencies.reqwest]
version          = "~0.11"
default-features = false
features         = ["blocking", "rustls-tls"]

[dependencies.git2]
version             = "~0.14"
default-features    = false
features            = ["https", "vendored-libgit2", "vendored-openssl"]

[dev-dependencies]
assert_cmd  = "~2.0"
predicates  = "~2.1"
same-file   = "~1.0"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true
